updated tel and mailto

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="page-article__content">
           <p>
             <span class="material-icons">phone_iphone</span>
-            <b>806.336.0921</b>
+            <a href="tel:+18063360921"><b>806.336.0921</b></a>
           </p>
           <p>
             <span class="material-icons">mail_outline</span>
-            <b>CLCole@gmail.com</b>
+            <a href="mailto:CLCole@gmail.com"><b>CLCole@gmail.com</b></a>
           </p>
           <p>
             <span class="material-icons">place</span>
@@ -137,7 +137,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__credits">
-      <h5>&copy; clcole.tech</h5>
+      <h5>&copy; CLCole</h5>
     </div>
   </footer>
 
