--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__credits">
-      <h5>&copy; CLCole</h5>
+      <h5>&copy; 2019 - <script>document.write(new Date().getFullYear())</script> CLCole.tech</h5>
     </div>
   </footer>
 
