--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="CLCole">
+  <meta name="description" content="Creative, reliable I.T. services to keep your business on track and ready for anything.">
+  <meta name="keywords" content="Information Technology, Programming, Coding, Web Development, Data Storage, Database Administration, Virtualization, Server Administration">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Pavanam&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="./css/styles.css">
   <title>CLCole - I.T. Services</title>
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 
 <body>
