update footer and email

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </p>
           <p>
             <span class="material-icons">mail_outline</span>
-            <a href="mailto:CLCole@gmail.com"><b>CLCole@gmail.com</b></a>
+            <a href="mailto:info@CLCole.tech"><b>info@CLCole.tech</b></a>
           </p>
           <p>
             <span class="material-icons">place</span>
@@ -140,7 +140,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__credits">
-      <h5>&copy; 2019 - <script>document.write(new Date().getFullYear())</script> CLCole.tech</h5>
+      <p>&copy; CLCole 2019 - <script>document.write(new Date().getFullYear())</script></p>
     </div>
   </footer>
 
