--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta name="author" content="CLCole">
   <meta name="description" content="Creative, reliable I.T. services to keep your business on track and ready for anything.">
   <meta name="keywords" content="Information Technology, Programming, Coding, Web Development, Data Storage, Database Administration, Virtualization, Server Administration">
+  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Pavanam&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
   <link rel="stylesheet" href="./css/styles.css">
   <title>CLCole - I.T. Services</title>
 </head>
@@ -61,20 +64,35 @@
         </header>
         <div class="page-article__content">
             <p>
+              <span class="material-icons">language</span> 
+              <b>Web Development</b>
+            </p>
+            <p>
+              Establish credibility and strengthen your business brand with custom website design
+            </p>
+            <p>
               <span class="material-icons">storage</span> 
-              <b>Data Solutions</b>
+              <b>Data Management</b>
+            </p>
+            <p>
+              Ensure your business critical information is backed up
+              and always available with proven data management solutions
             </p>
             <p>
               <span class="material-icons">cloud_queue</span> 
               <b>Virtualization</b>
             </p>
             <p>
-              <span class="material-icons">computer</span> 
-              <b>Server Administration</b>
+              Maximize your business hardware capacity, reduce energy usage and administration time,
+              and extend the life of legacy systems with virtualization technology
             </p>
             <p>
-              <span class="material-icons">language</span> 
-              <b>Web Development</b>
+              <span class="material-icons">computer</span> 
+              <b>Windows/Linux Administration</b>
+            </p>
+            <p>
+              Keep your business software environment high-performance, current, secure, and communicating
+              with system administration and support
             </p>
         </div>
       </article>
@@ -95,11 +113,11 @@
           </p>
           <p>
             <span class="material-icons">mail_outline</span>
-            <a href="mailto:info@CLCole.tech"><b>info@CLCole.tech</b></a>
+            <a href="mailto:christopher@CLCole.tech"><b>christopher@clcole.tech</b></a>
           </p>
           <p>
             <span class="material-icons">place</span>
-            <b>Texas</b>
+            <b>Canyon, Texas</b>
           </p>
         </div>
       </article>
