--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </p>
           <p>
             <span class="material-icons">mail_outline</span>
-            <a href="mailto:christopher@CLCole.tech"><b>christopher@clcole.tech</b></a>
+            <a href="mailto:christopher@clcole.tech"><b>christopher@clcole.tech</b></a>
           </p>
           <p>
             <span class="material-icons">place</span>
