--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__credits">
-      <p>&copy; CLCole 2019 - <script>document.write(new Date().getFullYear())</script></p>
+      <p>&copy; CLCole <script>document.write(new Date().getFullYear())</script></p>
     </div>
   </footer>
 
