--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#eeeeee">
   
   <link rel="stylesheet" href="./css/styles.css">
-  <title>CLCole I.T. Services</title>
+  <title>CLCole I.T. Services - Contact</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <h1 class="page-header__title"><span>CL</span>COLE</h1>
   </header>
 
-  <nav class="top-nav">
+  <nav id="mainNav" class="top-nav">
     <div class="top-nav__content">
       <a href="./index.html">Services</a>
       <a href="./about.html">About Me</a>
@@ -43,53 +43,25 @@
   <main class="page-main">
 
     <section class="page-section">
-
+      
       <article class="page-article">
-
         <header class="page-article__header">
-          <h2 class="page-article__header-short">I.T. Services</h2>
-          <h2 class="page-article__header-long">Information Technology Services</h2>
+          <h2>Contact</h2>
         </header>
-
         <div class="page-article__content">
-
-          <div class="page-article__services">
-            <img src="./images/web.svg" alt="web development">
-            <h3>Web Development</h3>
-            <p>
-              Establish credibility and strengthen your business brand with custom website design and graphics
-            </p>
-          </div>
-
-          <div class="page-article__services">
-            <img src="./images/data.svg" alt="data management">
-            <h3>Data Management</h3>
-            <p>
-              Ensure your business critical information is backed up
-              and always available with proven data management solutions
-            </p>
-          </div>
-
-          <div class="page-article__services">
-            <img src="./images/virt.svg" alt="virtualization">
-            <h3>Virtualization</h3>
-            <p>
-              Maximize your business hardware capacity, reduce energy usage and administration time,
-              and extend the life of legacy systems with virtualization technology
-            </p>
-          </div>
-
-          <div class="page-article__services">
-            <img src="./images/sys.svg" alt="system administration">
-            <h3>Windows/Linux Administration</h3>
-            <p>
-              Keep your business software environment high-performance, current, secure, and communicating
-              with system administration and support
-            </p>
-          </div>
-
+          <p>
+            <span class="material-icons">phone_iphone</span>
+            <a href="tel:+18063360921"><b>806.336.0921</b></a>
+          </p>
+          <p>
+            <span class="material-icons">mail_outline</span>
+            <a href="mailto:christopher@clcole.tech"><b>christopher@clcole.tech</b></a>
+          </p>
+          <p>
+            <span class="material-icons">place</span>
+            <b>Canyon, Texas</b>
+          </p>
         </div>
-
       </article>
 
     </section>
