--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
   <header class="page-header">
     <button class="top-nav__button"><b>&#9776;</b></button> 
-    <h1 class="page-header__title"><span>CL</span>COLE</h1>
+    <h1 class="page-header__title"><a href="./index.html"><span>CL</span>COLE</a></h1>
   </header>
 
   <nav id="mainNav" class="top-nav">
