--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <header class="page-header">
     <button class="top-nav__button"><b>&#9776;</b></button> 
-    <h1 class="page-header__title"><span>CL</span>COLE</h1>
+    <h1 class="page-header__title"><a href="./index.html"><span>CL</span>COLE</a></h1>
   </header>
 
   <nav class="top-nav">
@@ -81,7 +81,7 @@
 
           <div class="page-article__services">
             <img src="./images/sys.svg" alt="system administration">
-            <h3>Windows/Linux Administration</h3>
+            <h3>System Administration</h3>
             <p>
               Keep your business software environment high-performance, current, secure, and communicating
               with system administration and support
@@ -113,6 +113,7 @@
   </footer>
 
   <script src="./js/index.js"></script>
+  <script src="./js/icon-intersection.js"></script>
 
 </body>
 
