--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
     <nav class="page-footer__nav">
       <p><a href="./index.html">Services</a></p>
-      <p><a href="./about.html">About</a></p>
+      <p><a href="./about.html">About Me</a></p>
       <p><a href="./contact.html">Contact</a></p>
     </nav>
 
